<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/imageViewImageProductDetail"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/shopping_bag"
        android:contentDescription="@string/view_thumbnail" />
    <TextView
        android:id="@+id/txtViewProductNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_product_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/txtViewProductPriceDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_product_price"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        />
    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:backgroundTint="@color/baemin"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
</LinearLayout>