<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageViewCartBackground"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/shopping_cart_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".0"
        android:contentDescription="@string/title_cart" />

    <TextView
        android:id="@+id/txtViewMyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/string_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCartBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageViewCartBackground"
        app:layout_constraintTop_toTopOf="@+id/imageViewCartBackground" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewAllCartAdded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCartBackground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTotal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/main_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/string_total_product_price"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewTotalPriceAllCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EE4D2D"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".4"
            app:layout_constraintStart_toEndOf="@+id/txtTotal"
            app:layout_constraintTop_toTopOf="@+id/txtTotal" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/credit_card_icon"
            app:layout_constraintBottom_toBottomOf="@+id/txtViewTotalPriceAllCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintStart_toEndOf="@+id/txtViewTotalPriceAllCart"
            app:layout_constraintTop_toTopOf="@+id/txtViewTotalPriceAllCart"
            android:contentDescription="@string/add_to_cart" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>